Add envio de e-mails

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,16 @@ services:
     networks:
       - docker2
 
+  mailpit:
+    image: axllent/mailpit
+    container_name: mailpit
+    restart: unless-stopped
+    ports:
+      - "1025:1025"  
+      - "8025:8025" 
+    networks:
+      - docker2
+
 volumes:
   dbdata:
 
