--- a/app/.env.example
+++ b/app/.env.example
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:pjhrR8x5OKXK3MQKtrsIBcojSVR8eOUEPXSix63XsT8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8088
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=db_app
+DB_USERNAME=admin
+DB_PASSWORD=Mvx189..
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+QUEUE_CONNECTION=database
